@@ -1,3 +1,4 @@
+	* fixed crash with empty url-lists in torrent files
 	* added missing max_connections() function to python bindings
 
 0.16.7 release
